--- a/service-tree-navigator-example/src/main/res/layout/path_second.xml
+++ b/service-tree-navigator-example/src/main/res/layout/path_second.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent"
+<com.zhuinden.servicetreenavigatorexample.SecondView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome to second!"/>
-</LinearLayout>
+</com.zhuinden.servicetreenavigatorexample.SecondView>
